# work_with_iq

./: .flake8  .gitignore  README.md  base_main.py  clear_table.py  data.csv  database.py  env.example  main.py  pyproject.toml  users.db
.github/workflows/: main.yml
queries/: leads_fitness_20251027_114705.csv  leads_fitness_20251027_114705.json  leads_fitness_20251027_172405.csv  leads_fitness_20251027_172405.json  leads_fitness_20251028_111731.csv  leads_fitness_20251028_111731.json  parsed_users_20251027_091706.csv  parsed_users_20251027_091706.json
vk_spam_bot-main/: Spam.py  config.py  database.py  sendler.py  user_ids.xlsx  utils.py
vk_spam_bot-main/cash/: leads_стартап_5394688.xlsx
