[project]
name = "vk-parser-master"
version = "0.1.0"
description = ""
authors = [
    {name = "basir",email = "m-basir@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vk-api (>=11.10.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "2captcha-python (>=1.5.1,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "ruwordnet (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
