[project]
name = "main-vk-sendler"
version = "0.1.0"
description = ""
authors = [
    {name = "basir",email = "m-basir@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "vk-api (>=11.10.0,<12.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "transliterate (>=1.10.2,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
