[project]
name = "vk-parser-master"
version = "0.1.0"
description = ""
authors = [
    {name = "basir",email = "m-basir@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vk-api (>=11.10.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "2captcha-python (>=1.5.1,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "ruwordnet (>=0.0.6,<0.0.7)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "transliterate (>=1.10.2,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
